--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ TDL
         sur la borne, ainsi que leur communication avec un navigateur sécurisé.
     </p>
     <p class="techno">Technologies utilisées: C#, .NET, ASP.CORE, Javascript, Chromium</p>
-    <img src="">
     <a></a>
 
 </section>
@@ -47,7 +46,6 @@ TDL
         afin de pouvoir permettre à chacun de garder ses tâches privées et accessible uniquement par lui-même.
     </p>
     <p class="techno">Technologies utilisées: HTML CSS JS, PostgresSQL, Nodejs</p>
-    <img src="">
     <span>Liens github: <a href="https://github.com/PashmiDev/TDL_FRONT">Frontend</a> </span>
     <span><a href="https://github.com/PashmiDev/Tdl_Back">Backend</a></span>
 </section>
@@ -61,12 +59,14 @@ TDL
         de réveil du à un emploi du temps qui varie souvent. L'objectif de cette application est de calculer le maximum
         de chose faisable au révéil en fonction d'une paramétrisation la veille.
         Par exemple: Si je compte faire un peu de sport, prendre une douche, manger un petit déjeuner avant de partir.
-        Je n'aurais qu'a rentrer ces tâches la veille, avec un odre, une priorité ainsi qu'une fourchette de temps.
+        Je n'aurais qu'à rentrer ces tâches la veille, avec un odre, une priorité ainsi qu'une fourchette de temps.
         Lors du réveil, en fonction de mon heure de réveil ainsi que de l'heure à laquelle je dois partir, l'application
         calculera les tâches que j'ai le temps ou non de réaliser.
 
     </p>
-    <p class="techno">Technologies utilisées: Angular Nodejs MongoDB</p>
+    <p class="techno">Technologies utilisées: Angular, Nodejs, MongoDB</p>
+    <span>Liens github: <a href="https://github.com/LittleMat/AuPetitMatinWeb">Frontend</a> </span>
+    <span><a href="https://github.com/LittleMat/auPetitMatinBack">Backend</a></span>
     <img src="">
     <a></a>
 
@@ -74,6 +74,7 @@ TDL
 
 <!-- Un projet par session-->
 <section>
+    <img src="arduino.jpg">
     <h3> Arduino: Prototype d'une station météo</h3>
     <span class="date"> Juin 2019 - Juillet 2019 </span>
     <p class="short-description">
